# chess-ai-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  test_stockfish.py
backend/api/: main.py
backend/app/agent/: agent.py
backend/app/api/v1/routers/: agent_router.py  chess_router.py
backend/app/rag/: chunker.py  embedder.py  milvus_client.py  rag_service.py
backend/app/rag/knowledge/: Gambit_dame.md  defense_caro_kann.md  defense_est_indienne.md  defense_francaise.md  defense_nimzo_indienne.md  defense_sicilienne.md  ouverture_anglaise.md  partie_espagnole.md  partie_italienne.md  systeme_londres.md
backend/app/schemas/: chess.py  lichess.py  stockfish.py
backend/app/services/: lichess_service.py  mongo_service.py  stockfish_service.py  youtube_service.py
backend/app/tools/: lichess_tool.py  rag_tool.py  stockfish_tool.py  youtube_tool.py
backend/scripts/: agent_minimal_testing.py  ingest_wikichess.py  smoke_errors.py  smoke_youtube.py  test_agent_minimal.py
backend/tests/: test_routers.py  test_stockfish_service.py
data/: README.md
docs/: agent_test_log.md  journal.md  note_mcp_benefices_limites.md  notes.md
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/app/: app-module.ts  app.css  app.html  app.ts
frontend/src/app/board/: board.css  board.html  board.ts
frontend/src/app/models/: agent.models.ts
frontend/src/app/recommendations-panel/: recommendations-panel.css  recommendations-panel.html  recommendations-panel.ts
prompts/: agent_system.md
(+1 files in other folders)
