[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.0",
    "path>=17.1.1",
    "pymilvus[model]>=3.0.0",
    "pymongo>=4.17.0",
    "pytest>=9.0.3",
    "python-frontmatter>=1.3.0",
    "stockfish>=5.2.0",
    "uvicorn>=0.46.0",
]
